# linq

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  mkdocs.yml
.github/workflows/: build-linux-clang.yml  build-linux-gcc.yml  build-macos-appleclang.yml  build-windows-msvc.yml
docs/: index.md  license.md  options.md
docs/operators/: aggregation.md  concatenation.md  element_access.md  filters.md  generation.md  join.md  partition.md  projection.md  quantifiers.md  set.md  sorting.md
include/: linq.hpp
tests/: CMakeLists.txt  aggregation.cpp  basics.cpp  concatenation.cpp  cxx17.cpp  datatypes.hpp  element_access.cpp  filters.cpp  generation.cpp  join.cpp  no_stl_containers.cpp  partition.cpp  projection.cpp  quantifiers.cpp  set.cpp  sorting.cpp  stl_container_conv.cpp
